[project]
name = "jepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.2",
    "autorom>=0.6.1",
    "gymnasium[ale,atari]>=1.2.2",
    "matplotlib>=3.10.7",
    "minari[all]>=0.4.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
